# python-template

./: cookiecutter.json
{{ cookiecutter.__project_slug }}/: .pre-commit-config.yaml  Dockerfile  Makefile  create_envrc.sh  noxfile.py  pyproject.toml  t
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __init__.py  __main__.py  calculator.py
{{ cookiecutter.__project_slug }}/tests/: __init__.py  test_main.py
