[tool.poetry]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.__version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.__full_name }} <{{ cookiecutter.__email }}>"]
license = "{{ cookiecutter.__license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.__github_user }}/{{ cookiecutter.__project_slug }}"
repository = "https://github.com/{{ cookiecutter.__github_user }}/{{ cookiecutter.__project_slug }}"
documentation = "https://{{ cookiecutter.__project_slug }}.readthedocs.io"
packages = [
    { include = "{{cookiecutter.__package_name}}", from = "src" },
]
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{ cookiecutter.__github_user }}/{{ cookiecutter.__project_slug }}/releases"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
click = ">=8.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-cov = "^4.0.0"
black = ">=22.8.0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=5.0.4"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
flake8-comprehensions = ">=3.10.0"
flake8-simplify = ">=0.19.3"
isort = ">=5.10.1"
mypy = "^0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
deptry = "^0.6.4"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__package_name }}.__main__:add_cli"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.__package_name }}", "tests"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
files = ["{{ cookiecutter.__package_name }}"]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
# disallow_untyped_defs = "True"
# disallow_any_unimported = "True"
# no_implicit_optional = "True"
# check_untyped_defs = "True"
# warn_return_any = "True"
# warn_unused_ignores = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
